added people routes for demo
