# openapi.json
@@ -16,6 +16,123 @@
     }
   ],
   "paths": {
+    "/api/v1/me": {
+      "get": {
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/models.SinglePerson"
+                }
+              }
+            },
+            "description": "OK"
+          }
+        },
+        "tags": [
+          "people"
+        ],
+        "description": "Get current person's details\nPlease refer to https://apidocs.teamwork.com/docs/teamwork/de01076fde3a5-get-current-user-details for more parameter options.",
+        "summary": "Get current person's details"
+      }
+    },
+    "/api/v1/people": {
+      "get": {
+        "parameters": [
+          {
+            "description": "Enter company id",
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/models.People"
+                }
+              }
+            },
+            "description": "OK"
+          }
+        },
+        "tags": [
+          "people"
+        ],
+        "description": "Get a list of all people in the current user's company.",
+        "summary": "Get all people from current user's company."
+      }
+    },
+    "/api/v1/people/{id}": {
+      "get": {
+        "parameters": [
+          {
+            "description": "Enter person id",
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/models.SinglePerson"
+                }
+              }
+            },
+            "description": "OK"
+          }
+        },
+        "tags": [
+          "people"
+        ],
+        "description": "Get specific persons' details",
+        "summary": "Get specific person"
+      }
+    },
+    "/api/v1/people/{id}/projects": {
+      "get": {
+        "parameters": [
+          {
+            "description": "Enter person id",
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/models.MultiProject"
+                }
+              }
+            },
+            "description": "OK"
+          }
+        },
+        "tags": [
+          "people"
+        ],
+        "description": "List projects for specified person",
+        "summary": "List projects for specified person"
+      }
+    },
     "/api/v1/projects": {
       "get": {
         "responses": {
@@ -239,6 +356,27 @@
           "description": "Enter auth and domain name properties"
         },
         "summary": "Test auth against the specification"
+      }
+    },
+    "/api/v1/stats/person/{id}": {
+      "get": {
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/models.OverallPerson"
+                }
+              }
+            },
+            "description": "OK"
+          }
+        },
+        "tags": [
+          "people"
+        ],
+        "description": "Get statistics for a particular person id",
+        "summary": "Get statistics for a particular person"
       }
     },
     "/api/v1/tasklists/{id}": {
@@ -531,6 +669,23 @@
         },
         "type": "object"
       },
+      "models.MinimalPerson": {
+        "properties": {
+          "companyId": {
+            "type": "string"
+          },
+          "deleted": {
+            "type": "boolean"
+          },
+          "id": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string"
+          }
+        },
+        "type": "object"
+      },
       "models.MultiActivity": {
         "properties": {
           "activities": {
@@ -586,6 +741,158 @@
           },
           "todo-list": {
             "$ref": "#/components/schemas/models.ToDoList"
+          }
+        },
+        "type": "object"
+      },
+      "models.OverallPerson": {
+        "properties": {
+          "permissions": {
+            "$ref": "#/components/schemas/models.Permissions"
+          },
+          "person": {
+            "$ref": "#/components/schemas/models.Person"
+          },
+          "projects": {
+            "items": {
+              "$ref": "#/components/schemas/models.Project"
+            },
+            "type": "array"
+          }
+        },
+        "type": "object"
+      },
+      "models.People": {
+        "properties": {
+          "STATUS": {
+            "type": "string"
+          },
+          "people": {
+            "items": {
+              "$ref": "#/components/schemas/models.MinimalPerson"
+            },
+            "type": "array"
+          }
+        },
+        "type": "object"
+      },
+      "models.Permissions": {
+        "properties": {
+          "can-access-templates": {
+            "type": "boolean"
+          },
+          "can-add-projects": {
+            "type": "boolean"
+          },
+          "can-manage-people": {
+            "type": "boolean"
+          },
+          "canAccessCalendar": {
+            "type": "boolean"
+          },
+          "canManageCustomFields": {
+            "type": "boolean"
+          },
+          "canManageProjectTemplates": {
+            "type": "boolean"
+          },
+          "canViewProjectTemplates": {
+            "type": "boolean"
+          }
+        },
+        "type": "object"
+      },
+      "models.Person": {
+        "properties": {
+          "administrator": {
+            "type": "boolean"
+          },
+          "company-name": {
+            "type": "string"
+          },
+          "companyId": {
+            "type": "string"
+          },
+          "created-at": {
+            "type": "string"
+          },
+          "deleted": {
+            "type": "boolean"
+          },
+          "email-address": {
+            "type": "string"
+          },
+          "first-name": {
+            "type": "string"
+          },
+          "id": {
+            "type": "string"
+          },
+          "im-handle": {
+            "type": "string"
+          },
+          "im-service": {
+            "type": "string"
+          },
+          "last-login": {
+            "type": "string"
+          },
+          "last-name": {
+            "type": "string"
+          },
+          "lengthOfDay": {
+            "type": "string"
+          },
+          "marketoId": {
+            "type": "string"
+          },
+          "permissions": {
+            "$ref": "#/components/schemas/models.Permissions"
+          },
+          "phone-number-home": {
+            "type": "string"
+          },
+          "phone-number-mobile": {
+            "type": "string"
+          },
+          "phone-number-office": {
+            "type": "string"
+          },
+          "phone-number-office-ext": {
+            "type": "string"
+          },
+          "pid": {
+            "type": "string"
+          },
+          "private-notes": {
+            "type": "string"
+          },
+          "private-notes-text": {
+            "type": "string"
+          },
+          "profile": {
+            "type": "string"
+          },
+          "profile-text": {
+            "type": "string"
+          },
+          "site-owner": {
+            "type": "boolean"
+          },
+          "title": {
+            "type": "string"
+          },
+          "twoFactorAuthEnabled": {
+            "type": "boolean"
+          },
+          "user-name": {
+            "type": "string"
+          },
+          "user-type": {
+            "type": "string"
+          },
+          "userUUID": {
+            "type": "string"
           }
         },
         "type": "object"
@@ -887,6 +1194,17 @@
           },
           "account": {
             "$ref": "#/components/schemas/models.Account"
+          }
+        },
+        "type": "object"
+      },
+      "models.SinglePerson": {
+        "properties": {
+          "STATUS": {
+            "type": "string"
+          },
+          "person": {
+            "$ref": "#/components/schemas/models.Person"
           }
         },
         "type": "object"
